gitops/apps/spring-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: default
spec:
  selector:
    app: spring-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
